tests/should_fail/struct_undeclared_generic_field.nv
module syntax_generic_param_in_non_generic_struct

import super.std.core

// Using $T in struct without declaring it as generic
struct BadStruct {
    value: $T,
}

let b = BadStruct { value: 42 }
